--- a/css-custom-properties.css
+++ b/css-custom-properties.css
@@ -14,7 +14,7 @@
 /*************************************** COMMENTS var() Function ************************************************/
 :root
 {
-	--main-bg-color: teal;
+	--main-bg-color: yellow;
 	--main-txt-color: blue;
 
 	--root-BG-color: AliceBlue;
