--- a/css-custom-properties.css
+++ b/css-custom-properties.css
@@ -25,7 +25,7 @@
 	--root-font-weight: 400;
 	--root-TXT-font-size: large;
 
-	--outerWrapper-BG-color: yellow;
+	--outerWrapper-BG-color: red;
 	--outerWrapper-TXT-color: DarkRed;
 	--outerWrapper-TXT-font-family: Frutiger, Baskerville, "Segoe UI", sans-serif;
 	--outerWrapper-TXT-font: Frutiger, Baskerville, "Segoe UI", sans-serif;	
